# Maximum-Bandwidth

./: .gitignore  Makefile  Matrix.cpp  Matrix.hpp  Matrix_generator.cpp  Matrix_generator.hpp  README.md  antibandwidth  main.cpp  shamefile
AntiBandwidth/: AntiBandwidth.cpp  AntiBandwidth.h  AntiBandwidth_test.cpp  catch.cpp  test_antibandwidth
BenchMark/: Grasp_Benchmark  Gvns_Benchmark  MultiStart_Benchmark  Tabu_Benchmark  Vnd_Benchmark  benchmarkMaster.py  graspBenchmark.cpp  graspCalculations_bcspwr01.csv  gvnsBenchmark.cpp  multiStartBenchmark.cpp  tabuBenchmark.cpp  temp_label.txt  vndBenchmark.cpp
BruteForceAlgorithm/: .gitignore  BruteForce.cpp  BruteForce.h  BruteForce_test.cpp  bruteforce  inst1.txt  main.cpp  test_bruteforce
DeterministAlgorithm/: AntiBandwidth.cpp  AntiBandwidth.h  AntiBandwidth_test.cpp  DeterministAlgorithm.cpp  DeterministAlgorithm.h  DeterministAlgorithm_test.cpp  Graph.cpp  GraphGenerator.cpp  GraphGenerator.h  Makefile  a.out  determinist  inst1.txt  main.cpp  test  test_antibandwidth  test_determinist
GRAPH/: CMakeLists.txt  Graph.h
GRAPH/GraphGenerator/: CMakeLists.txt  Graph.cpp  Graph.h  GraphGenerator.h  a.out
GRAPH/instances/: inst1.txt
GRASP/: CMakeLists.txt  GraphGenerator.h  Grasp  Grasp.cpp  Grasp.h  Grasp_test.cpp  graspCalculations.csv  inst1.txt  main.cpp
GraphGenerator/: .gitignore  GraphGenerator.cpp  GraphGenerator.h  Matrix_generator.hpp  main.cpp
Literature_Instances/: .~lock.abplib_bestvalues.xls#  abplib_bestvalues.xls
MatrixGenerator/: Matrix.cpp  Matrix_generator.cpp  Matrix_generator.hpp  (+3 more)
(+272 files in other folders)
